--- a/index.html
+++ b/index.html
@@ -55,13 +55,6 @@
 
                 <div class="image-list">
                     <div class="image-desain">
-                        <a href="images/ADesaIIN.jpg" data-lightbox="image-desain">
-                            <img src="images/ADesaIIN.jpg">
-                            <p>T-shirt ADesaIN28  One piace</p>
-                            <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
-                        </a>
-                    </div>
-                    <div class="image-desain">
                         <a href="images/cobaka.jpg" data-lightbox="image-desain">
                             <img src="images/cobaka.jpg">
                             <p>T-shirt ADesaIN28  Super mario</p>
@@ -71,14 +64,21 @@
                     <div class="image-desain">
                         <a href="images/ADesAaIIN.jpg" data-lightbox="image-desain">
                             <img src="images/ADesAaIIN.jpg">
-                            <p>T-shirt ADesaIN28  Penn Tool</p>
+                            <p>T-shirt ADesaIN28  Penn Tool Black</p>
                             <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
                         </a>
                     </div>
                     <div class="image-desain">
-                        <a href="images/ADesaIN.jpg" data-lightbox="image-desain">
-                            <img src="images/ADesaIN.jpg">
-                            <p>T-shirt ADesaIN28  One piace</p>
+                        <a href="images/auw.jpg" data-lightbox="image-desain">
+                            <img src="images/auw.jpg">
+                            <p>T-shirt ADesaIN28  Penn Tool Steel Blue</p>
+                            <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
+                        </a>
+                    </div>
+                    <div class="image-desain">
+                        <a href="images/GARUDA95.jpg" data-lightbox="image-desain">
+                            <img src="images/GARUDA95.jpg">
+                            <p>T-shirt ADesaIN28  logo</p>
                             <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
                         </a>
                     </div>
@@ -92,7 +92,7 @@
                 <div class="kolom">
                     <p class="deskripsi">our Service</p>
                     <h2>Desain</h2>
-                    <p>Dibawah ini ada beberapa cara untuk Order desain in @adesain28_</p>
+                    <p>Dibawah ini ada beberapa cara untuk Order desain in @adesain28_</div></p>
                 </div>
 
                 <div class="service-container">
