--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <div class="home"><img src="images/a.png" width="600px"/></div>
+            <div class="home"><img src="images/adesain28_.png" width="600px"/></div>
             <div class="kolom">
                 <p class="deskripsi">Welcome #diADesaIN . IO</p>
                 <h2>Tetap Semangat, Tetap Jaga Kesehatan</h2>
@@ -92,7 +92,7 @@
                 <div class="kolom">
                     <p class="deskripsi">our Service</p>
                     <h2>Desain</h2>
-                    <p>Dibawah ini ada beberapa cara untuk Order desain in @adesain28_</div></p>
+                    <p>Dibawah ini step by step cara untuk tanya desain di @adesain28_</p>
                 </div>
 
                 <div class="service-container">
@@ -118,7 +118,7 @@
 
                     <div class="s-box">
                         <div class="images"><img src="images/s1.png" width="60px"></div>
-                        <h>Order</h>
+                        <h>Selesai</h>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae non doloribus sequi neque rem?</p>
 
                         <p style="text-align: center;">
