--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
                 <div class="image-list">
                     <div class="image-desain">
-                        <a href="images/cobaka.jpg" data-lightbox="image-desain">
-                            <img src="images/cobaka.jpg">
+                        <a href="images/OT.jpg" data-lightbox="image-desain">
+                            <img src="images/OT.jpg">
                             <p>T-shirt ADesaIN28  Super mario</p>
                             <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
                         </a>
@@ -69,9 +69,9 @@
                         </a>
                     </div>
                     <div class="image-desain">
-                        <a href="images/auw.jpg" data-lightbox="image-desain">
-                            <img src="images/auw.jpg">
-                            <p>T-shirt ADesaIN28  Penn Tool Steel Blue</p>
+                        <a href="images/gank.jpg" data-lightbox="image-desain">
+                            <img src="images/gank.jpg">
+                            <p>T-shirt ADesaIN28  Punakawan Gank</p>
                             <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
                         </a>
                     </div>
@@ -79,6 +79,48 @@
                         <a href="images/GARUDA95.jpg" data-lightbox="image-desain">
                             <img src="images/GARUDA95.jpg">
                             <p>T-shirt ADesaIN28  logo</p>
+                            <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
+                        </a>
+                    </div>
+                </div>
+            </div>    
+        </section>
+
+        <!-- untuk image box  -->  
+        <section id="image-box">
+            <div class="tengah">
+                <div class="kolom">
+                    <p class="deskripsi">our design</p>
+                    <h2>Box Packaging</h2>
+                    <p>Dibawah ini ada beberapa gambar/foto hasil desain By ADesaIN</p>
+                </div>
+
+                <div class="image-list-box">
+                    <div class="image-desain-box">
+                        <a href="images/OT-BOX.jpg" data-lightbox="image-desain-box">
+                            <img src="images/OT-BOX.jpg">
+                            <p>T-shirt ADesaIN28  Super mario</p>
+                            <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
+                        </a>
+                    </div>
+                    <div class="image-desain-box">
+                        <a href="images/roket.jpg" data-lightbox="image-desain-box">
+                            <img src="images/roket.jpg">
+                            <p>T-shirt ADesaIN28  Super mario</p>
+                            <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
+                        </a>
+                    </div>
+                    <div class="image-desain-box">
+                        <a href="images/jos.jpg" data-lightbox="image-desain-box">
+                            <img src="images/jos.jpg">
+                            <p>T-shirt ADesaIN28  Super mario</p>
+                            <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
+                        </a>
+                    </div>
+                    <div class="image-desain-box">
+                        <a href="images/baru.jpg" data-lightbox="image-desain-box">
+                            <img src="images/baru.jpg">
+                            <p>T-shirt ADesaIN28  Super mario</p>
                             <p><a href="#contact" class="tbl-brown">Lihat detail</a></p>
                         </a>
                     </div>
