--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                 <div class="partner-list">
                     <div class="logo-partner">
-                        <img src="images/ADIN DESAIN.png"/>
+                        <img src="images/logo.png"/>
                     </div>
                 </div>
             </div>
